flussonic (3.68.18)

  * don't set GET_PARAMETER is rtsp camera doesn't support it
  * fix graphic layout
  * fix dvr_hour_storage when blob is being deleted
  * show disk and segment traffic in panel

flussonic (3.68.17)

  * graphics in admin panel now using raphael.js
  * fixed sending RTCP RR when no SSRC in Rtp-Info
  * fixed sending RTCP RR on UDP connection
  * fixed RTSP playout

flussonic (3.68.16)

  * fix admin panel playing rtmp files
  * less debug in rtsp_socket when reconnecting
  * pulse now shows realtime traffic stats
  * flu_file sends single event about segment to pulse
  * pulse shows file stats

flussonic (3.68.15)

  * DVR packetizer now writes on disk in async manner with segment droping
  * file disk io is tagged with pulse measurements now
  * migrating to lhttpc client in auth backend
  * migrating to lhttpc client in licence client
  * migrating to lhttpc client in hls_reader
  * hls_reader now notifies if segment cannot download in proper time

flussonic (3.68.14)

  * don't fail on afrt errors in hds when duration less than DTS
  * added update-debian.sh
  * fixed flu_session problem when backend wasn't rerequested
  * added protection for dvr_hour_storage when cannot write file
  * refactored hls_reader to be impulse without monotonic

flussonic (3.68.13)

  * rtsp reader don't fail if old reply for frame returns
  * i386 deploy support

flussonic (3.68.12)
  
  * request media size before drawing player
  * open HLS in flash player on firefox
  * S3 storage backend for DVR
  * OSMF player with HLS
  * notify about server disconnect in admin panel
  * flu_session inner refactoring
  * added stale authorization cache in flu_session
  * added global session limit and per-ip session limit
  * refactored dvr storage to be able to keep previews and keys
  * fix archive.js to enable selecting video from gap

flussonic (3.68.11)

  * don't crash on preview request
  * don't crash on wrong media request